<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <RelativeLayout
        android:id="@+id/stutebar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#00000000"
        />

    <RelativeLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_below="@id/stutebar">


        <ImageView
            android:id="@+id/back"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_alignParentLeft="true"
            android:src="@drawable/back"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_setting_about"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textColor="#ff23272e"
            android:textSize="17sp"
            />

    </RelativeLayout>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_below="@+id/head"
        android:layout_marginTop="65dp"
        android:src="@mipmap/icon_round"
        android:layout_centerHorizontal="true"/>


    <TextView
        android:id="@+id/version_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/logo"
        android:textColor="#dddddd"
        android:layout_marginTop="12dp"
        android:textSize="14dp"
        />


        <TextView
            style="@style/about_item_style"
            android:id="@+id/a2"
            android:textSize="15dp"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/version_name"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="38dp"
            android:layout_centerHorizontal="true"
            android:text="@string/contectUs" />


        <TextView
            android:id="@+id/a4"
            style="@style/about_item_style"
            android:textSize="15dp"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/a2"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="38dp"
            android:layout_centerHorizontal="true"
            android:text="@string/tele" />


    <RelativeLayout
        android:id="@+id/buttomaciton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:background="#000000"
        />
</RelativeLayout>