<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5">

    <RelativeLayout
        android:id="@+id/stutebar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#00000000" />

    <RelativeLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_below="@id/stutebar"
        android:background="#ffffff">


        <ImageView
            android:id="@+id/back"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_alignParentLeft="true"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/register_title"
            android:textColor="#ff23272e"
            android:textSize="@dimen/title_size" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/head"
        android:background="#ffffff">


        <RelativeLayout
            android:id="@+id/btn_add"
            android:layout_width="105dp"
            android:layout_height="105dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:background="@drawable/shape_bg_register_add_head">

            <intersky.mywidget.CircleImageView
                android:id="@+id/addimg1"
                android:layout_width="105dp"
                android:layout_height="105dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:scaleType="centerCrop"
                android:src="@drawable/addg" />

            <ImageView
                android:id="@+id/addimg2"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:src="@drawable/camera" />

        </RelativeLayout>

        <TextView
            android:id="@+id/name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_add"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/edeg_size"
            android:layout_marginTop="50dp"
            android:text="@string/register_name"
            android:textColor="@color/form_title_color"
            android:textSize="@dimen/form_title_size" />


        <EditText
            android:id="@+id/name_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_title"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/edeg_size"
            android:layout_marginTop="15dp"
            android:layout_marginRight="@dimen/edeg_size"
            android:background="#00000000"
            android:textColor="@color/form_value_color"
            android:textSize="@dimen/form_value_size" />

        <View
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/name_value"
            android:layout_marginLeft="@dimen/edeg_size"
            android:layout_marginTop="5dp"
            android:layout_marginRight="@dimen/edeg_size"
            android:background="#e5e5e5" />


        <TextView
            android:id="@+id/age_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/line1"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/edeg_size"
            android:layout_marginTop="12dp"
            android:text="@string/register_age"
            android:textColor="@color/form_title_color"
            android:textSize="@dimen/form_title_size" />


        <EditText
            android:id="@+id/age_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/age_title"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/edeg_size"
            android:layout_marginTop="15dp"
            android:layout_marginRight="@dimen/edeg_size"
            android:background="#00000000"
            android:inputType="number"
            android:textColor="@color/form_value_color"
            android:textSize="@dimen/form_value_size" />

        <View
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/age_value"
            android:layout_marginLeft="@dimen/edeg_size"
            android:layout_marginTop="5dp"
            android:layout_marginRight="@dimen/edeg_size"
            android:background="#e5e5e5" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_below="@+id/line2"
            android:layout_marginLeft="@dimen/edeg_size"
            android:layout_marginTop="42dp"
            android:layout_marginRight="@dimen/edeg_size"
            android:layout_marginBottom="20dp"
            android:background="@drawable/shape_bg_head_select">

            <TextView
                android:id="@+id/btn_male"
                android:layout_width="180dp"
                android:layout_height="42dp"
                android:layout_alignParentLeft="true"
                android:background="@drawable/shape_bg_head_select_ed"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/register_male"
                android:textColor="@color/select_color"
                android:textSize="@dimen/form_title_size" />


            <TextView
                android:id="@+id/btn_female"
                android:layout_width="180dp"
                android:layout_height="42dp"
                android:layout_alignParentRight="true"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/register_female"
                android:textColor="#e5e5e5"
                android:textSize="@dimen/form_title_size" />
        </RelativeLayout>

    </RelativeLayout>

    <View
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/btn_next"
        android:background="#e5e5e5" />

    <TextView
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/buttomaciton"
        android:layout_alignParentLeft="true"
        android:background="#ffffff"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/register_next"
        android:textColor="@color/select_color"
        android:textSize="@dimen/form_title_size" />

    <RelativeLayout
        android:id="@+id/buttomaciton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:background="#000000" />


    <RelativeLayout
        android:id="@+id/shade"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#77000000"
        android:visibility="invisible"></RelativeLayout>
</RelativeLayout>
