<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5">

    <RelativeLayout
        android:id="@+id/stutebar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#00000000" />

    <RelativeLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_below="@id/stutebar"
        android:background="#ffffff">


        <ImageView
            android:id="@+id/menu"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:src="@drawable/menu" />

        <TextView
            android:id="@+id/maintitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/main_title"
            android:textColor="#ff23272e"
            android:textSize="@dimen/title_size" />


    </RelativeLayout>


    <LinearLayout
        android:id="@+id/paghead"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_above="@+id/buttomaciton"
        android:background="#ffffff"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/btndairy"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true">

                <ImageView
                    android:id="@+id/dairytimg"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/dairy" />

                <TextView
                    android:id="@+id/dairytext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/dairytimg"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="5dp"
                    android:text="@string/main_tab_dairy"
                    android:textColor="#333333"
                    android:textSize="16sp" />

            </RelativeLayout>


        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/btntcourse"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true">

                <ImageView
                    android:id="@+id/coursetimg"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/course" />

                <TextView
                    android:id="@+id/coursetext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/coursetimg"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="5dp"
                    android:text="@string/main_tab_course"
                    android:textColor="#333333"
                    android:textSize="16sp" />

            </RelativeLayout>
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/btnset"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true">

                <ImageView
                    android:id="@+id/settimg"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/set" />

                <TextView
                    android:id="@+id/settext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/settimg"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="5dp"
                    android:text="@string/main_tab_set"
                    android:textColor="#333333"
                    android:textSize="16sp" />

            </RelativeLayout>


        </RelativeLayout>

    </LinearLayout>

    <intersky.mywidget.NoScrollViewPager
        android:id="@+id/page"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/paghead"
        android:layout_below="@id/head"
        android:background="#f5f5f5" />


    <RelativeLayout
        android:id="@+id/shade"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#77000000"
        android:visibility="invisible"></RelativeLayout>

    <RelativeLayout
        android:id="@+id/buttomaciton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:background="#000000" />

</RelativeLayout>