<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5">

    <RelativeLayout
        android:id="@+id/stutebar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#00000000" />

    <RelativeLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_below="@+id/stutebar"
        android:background="#ffffff">


        <ImageView
            android:id="@+id/back"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_alignParentLeft="true"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/health_title"
            android:textColor="#ff23272e"
            android:textSize="@dimen/title_size" />


    </RelativeLayout>

    <ScrollView
        android:id="@+id/operview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/line3"
        android:layout_below="@+id/head">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#00000000">

            <RelativeLayout
                android:id="@+id/layer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff">

                <TextView
                    android:id="@+id/tall_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="@dimen/edeg_size"
                    android:layout_marginTop="50dp"
                    android:layout_marginRight="@dimen/edeg_size"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/health_tall"
                    android:textColor="@color/form_title_color"
                    android:textSize="@dimen/form_title_size" />


                <EditText
                    android:id="@+id/tall_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tall_title"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="@dimen/edeg_size"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="@dimen/edeg_size"
                    android:background="#00000000"
                    android:gravity="center_horizontal|center_vertical"
                    android:hint=""
                    android:inputType="number"
                    android:textColor="@color/form_value_color"
                    android:textColorHint="@color/form_title_color"
                    android:textSize="@dimen/form_value_size" />


                <View
                    android:id="@+id/line1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/tall_value"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="16dp"
                    android:background="#e5e5e5" />


                <TextView
                    android:id="@+id/weight_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/line1"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="@dimen/edeg_size"
                    android:layout_marginTop="12dp"
                    android:layout_marginRight="@dimen/edeg_size"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/health_weight"
                    android:textColor="@color/form_title_color"
                    android:textSize="@dimen/form_title_size" />


                <EditText
                    android:id="@+id/weight_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/weight_title"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="@dimen/edeg_size"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="@dimen/edeg_size"
                    android:background="#00000000"
                    android:gravity="center_horizontal|center_vertical"
                    android:hint=""
                    android:inputType="number"
                    android:textColor="@color/form_value_color"
                    android:textColorHint="@color/form_title_color"
                    android:textSize="@dimen/form_value_size" />

                <View
                    android:id="@+id/line2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/weight_value"
                    android:layout_marginLeft="@dimen/edeg_size"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="@dimen/edeg_size"
                    android:layout_marginBottom="20dp"
                    android:background="#e5e5e5" />
            </RelativeLayout>

            <WebView
                android:id="@+id/chart"
                android:layout_width="match_parent"
                android:layout_height="212dp"
                android:layout_below="@+id/layer"/>

            <Button
                android:id="@+id/chartbtn"
                android:layout_width="match_parent"
                android:layout_height="212dp"
                android:layout_below="@+id/layer"
                android:background="#00000000" />
        </RelativeLayout>

    </ScrollView>

    <View
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/btn_finish"
        android:background="#e5e5e5" />

    <TextView
        android:id="@+id/btn_finish"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/buttomaciton"
        android:layout_alignParentLeft="true"
        android:background="#ffffff"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/health_finish"
        android:textColor="@color/select_color"
        android:textSize="@dimen/form_title_size" />

    <RelativeLayout
        android:id="@+id/buttomaciton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:background="#000000" />


    <RelativeLayout
        android:id="@+id/shade"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#77000000"
        android:visibility="invisible"></RelativeLayout>
</RelativeLayout>
